testsuite/poke.pkl/cast-diag-4.pk
/* { dg-do compile } */

fun foo = string:
  {
   return 10 as string; /* { dg-error "" } */
  }
